--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-thumb{
 section.banner{
     width: 100%;
     height: 40vh;
-    background: url("https://wallpapercave.com/wp/wp2567196.jpg") no-repeat;
+    background: url("https://images.hdqwalls.com/wallpapers/nexus-space-digital-universe-4k-rt.jpg") no-repeat;
     background-size: cover;
 }
 
