--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body::-webkit-scrollbar-thumb{
 section.banner{
     width: 100%;
     height: 40vh;
-    background: url("https://images.hdqwalls.com/wallpapers/nexus-space-digital-universe-4k-rt.jpg") no-repeat;
-    background-size: cover;
+    background: url("https://cdn.wallpapersafari.com/38/77/pz5YaG.jpg") no-repeat;
+    background-size: 100% 100%;
 }
 
 main{
