--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section.banner{
     width: 100%;
     height: 40vh;
     background: url("https://wallpapercave.com/wp/wp2567196.jpg") no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
 }
 
 main{
